--- a/formularioApostas.html
+++ b/formularioApostas.html
@@ -6,132 +6,51 @@
     <title>Registrar Aposta</title>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
-
-        :root {
-            --primary-color: #00d4ff;
-            --secondary-color: #1f1f1f;
-            --background-dark: #121212;
-            --text-primary: #ffffff;
-            --text-secondary: #cccccc;
-            --card-hover: #2a2a2a;
-            --button-hover: #00aacc;
-            --neon-green: #00ff00;
-        }
-
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
         body {
-            font-family: 'Roboto', sans-serif;
-            background-color: var(--background-dark);
-            color: var(--text-primary);
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
             margin: 0;
-            padding: 20px;
         }
-
         .container {
-            background-color: var(--secondary-color);
-            padding: 30px;
-            border-radius: 15px;
-            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3);
-            width: 450px;
-            border: 1px solid rgba(255, 255, 255, 0.1);
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            width: 400px;
         }
-
         h2 {
             text-align: center;
-            color: var(--primary-color);
-            margin-bottom: 25px;
-            font-size: 1.8rem;
-            text-transform: uppercase;
-            letter-spacing: 1px;
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
         }
-
         label {
             display: block;
-            margin-top: 15px;
-            color: var(--text-primary);
-            font-size: 0.9rem;
+            margin-top: 10px;
         }
-
-        input, select {
+        input, select, button {
             width: 100%;
-            padding: 12px;
-            margin-top: 8px;
-            border: 2px solid var(--primary-color);
-            border-radius: 8px;
-            background-color: var(--background-dark);
-            color: var(--text-primary);
-            font-size: 14px;
-            transition: all 0.3s ease;
+            padding: 8px;
+            margin-top: 5px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
         }
-
-        input:focus, select:focus {
-            outline: none;
-            border-color: var(--button-hover);
-            box-shadow: 0 0 0 3px rgba(0, 212, 255, 0.2);
-        }
-
         button {
-            width: 100%;
-            padding: 15px;
-            background: linear-gradient(135deg, #00d4ff 0%, #00a6ff 100%);
-            color: #000;
+            background-color: #4CAF50;
+            color: white;
             border: none;
-            border-radius: 8px;
             cursor: pointer;
-            font-weight: 600;
-            font-size: 1rem;
-            text-transform: uppercase;
-            letter-spacing: 1px;
-            margin-top: 25px;
-            transition: all 0.3s ease;
-            box-shadow: 0 4px 15px rgba(0, 212, 255, 0.3);
         }
-
         button:hover {
-            background: linear-gradient(135deg, #00a6ff 0%, #0080ff 100%);
-            transform: translateY(-2px);
-            box-shadow: 0 6px 20px rgba(0, 212, 255, 0.4);
+            background-color: #45a049;
         }
-
-        button:active {
-            transform: translateY(1px);
-            box-shadow: 0 2px 10px rgba(0, 212, 255, 0.3);
-        }
-
         .back-button {
-            background: linear-gradient(135deg, #FF4C4C 0%, #FF0000 100%);
-            margin-top: 15px;
+            background-color: #f44336;
+            margin-top: 10px;
         }
-
         .back-button:hover {
-            background: linear-gradient(135deg, #FF0000 0%, #CC0000 100%);
-        }
-
-        @media (max-width: 480px) {
-            .container {
-                width: 90%;
-                padding: 20px;
-            }
-            
-            h2 {
-                font-size: 1.5rem;
-            }
-            
-            input, select, button {
-                padding: 10px;
-                font-size: 13px;
-            }
+            background-color: #d32f2f;
         }
     </style>
 </head>
@@ -140,7 +59,7 @@
         <h2>Registrar Aposta</h2>
         <form id="form-aposta">
             <label>Data da Aposta:
-                <input type="datetime-local" id="data_aposta" required value="">
+                <input type="datetime-local" id="data_aposta" required>
             </label>
             <label>Liga:
                 <input type="text" id="liga" required>
@@ -172,7 +91,6 @@
             <label>Valor (R$):
                 <input type="text" id="valor" pattern="R\$\s\d+,\d{2}" placeholder="R$ 0,00" readonly>
             </label>
-
             <button type="submit">Salvar</button>
             <button type="button" class="back-button" onclick="window.location.href='visualization.html'">Voltar</button>
         </form>
@@ -181,7 +99,7 @@
     <script>
         // Conexão com o Supabase
         const supabaseUrl = 'https://oxnlslxufmlxznhxkbzm.supabase.co';
-        const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im94bmxzbHh1Zm1seHpuaHhrYnptIiwicm9sZSI6ImFub24iLCJpYXQiOjE7NDAzNjMwMjAsImV4cCI6MjA1NTkzOTAyMH0.Wg8eEiSY1rqAkf2zCdHJzXU_fUOcs3sVrlmj_7YQaxQ';
+        const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im94bmxzbHh1Zm1seHpuaHhrYnptIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDAzNjMwMjAsImV4cCI6MjA1NTkzOTAyMH0.Wg8eEiSY1rqAkf2zCdHJzXU_fUOcs3sVrlmj_7YQaxQ';
         const supabase = supabase.createClient(supabaseUrl, supabaseKey);
 
         // Preenche a data atual automaticamente
